bump camel => 3.18.0