@@ -24,6 +24,9 @@ ext.appName = 'WhiskeyWayang'
 
 application {
     mainClass = appName
+    if (JavaVersion.current().java11Compatible) {
+        applicationDefaultJvmArgs = ['--add-exports=java.base/sun.nio.ch=ALL-UNNAMED']
+    }
 }
 
 tasks.named('run').configure {
